# narrate-ros

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/share/l2o_interface_mock/cmake/: l2o_interface_mockConfig.cmake
devel/share/moveit_servoing/cmake/: moveit_servoingConfig.cmake
src/: package.xml
src/l2c/: CMakeLists.txt  package.xml  requirements.txt
src/l2c/assets/calib_data_test/: camera_calibration
src/l2c/cfg/: ControllerConfig.cfg  PID.cfg
src/l2c/config/: config.py  panda_simulated_config.yaml  pose_tracking_settings.yaml  rviz_setup.rviz  trajectory_following.yaml
src/l2c/gazebo/models/kinect/: model.sdf
src/l2c/launch/: move_group_python_interface_tutorial.launch  moveit_panda.launch  pipeline_franka.launch  pose_tracker.launch  robot.launch  rosbag_record.launch  rosbag_record_camera.launch  trajectory_tracking.launch  two_cameras.launch
src/l2c/msg/: NamedPoseArrayStamped.msg  Optimization.msg  Plan.msg
src/l2c/prompts/: prompts.py
src/l2c/robots/: panda.urdf
src/l2c/scripts/: broadcast_static_tf.py  controller.py  gui.py  llm.py  main.py  perception.py  pose_tracker.cpp  robot.py  state_estimation.py  trajectory_follower.py
src/l2c/scripts/test/: detection_aruco.py  grip_red_box_hardcoded.py  pose_aruco.py
src/l2c/srv/: GetEEState.srv
src/l2c/worlds/: l2c_test.world
src/l2o_interface_mock/: CMakeLists.txt
src/l2o_interface_mock/launch/: l2o_interface_mock.launch
src/l2o_interface_mock/scripts/: controller.py  l2o_interface_mock_script.py  move_group_python_interface_tutorial.py  robot.py
src/moveit_servoing/: CMakeLists.txt  package.xml
src/moveit_servoing/app/: moveit_servoing_node.cpp
src/moveit_servoing/config/: panda_simulated_config.yaml
src/moveit_servoing/launch/: pose_tracking.launch
